src/main/java/owl/ltl/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package owl.ltl.parser;

import com.google.common.collect.BiMap;
import com.google.common.collect.HashBiMap;
import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import java.io.StringReader;
import java.util.ArrayList;
import java.util.BitSet;
import java.util.Collection;
import owl.ltl.BooleanConstant;
import owl.ltl.Conjunction;
import owl.ltl.Disjunction;
import owl.ltl.FOperator;
import owl.ltl.Formula;
import owl.ltl.FrequencyG;
import owl.ltl.GOperator;
import owl.ltl.Literal;
import owl.ltl.MOperator;
import owl.ltl.ROperator;
import owl.ltl.UOperator;
import owl.ltl.WOperator;
import owl.ltl.XOperator;
import owl.ltl.tlsf.ImmutableTLSF;
import owl.ltl.tlsf.TLSF;

@SuppressFBWarnings
@SuppressWarnings("all")
public class Parser implements ParserConstants {
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;

  static {
    jj_la1_init_0();
    jj_la1_init_1();
  }

  final private JJCalls[] jj_2_rtns = new JJCalls[50];
  final private int[] jj_la1 = new int[0];
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  /** Next token. */
  public Token jj_nt;
  public BiMap<String, Integer> map = HashBiMap.create();
  /** Current token. */
  public Token token;
  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  private int jj_endpos;
  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_gc = 0;
  private int jj_gen;
  private int jj_kind = -1;
  private int jj_la;
  private int[] jj_lasttokens = new int[100];
  private int jj_ntk;
  private boolean jj_rescan = false;
  private Token jj_scanpos, jj_lastpos;

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
    this(stream, null);
  }

  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    try {
      jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
    } catch (java.io.UnsupportedEncodingException e) {
      throw new RuntimeException(e);
    }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < jj_2_rtns.length; i++) {
      jj_2_rtns[i] = new JJCalls();
    }
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < jj_2_rtns.length; i++) {
      jj_2_rtns[i] = new JJCalls();
    }
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < jj_2_rtns.length; i++) {
      jj_2_rtns[i] = new JJCalls();
    }
  }

  public static Formula formula(String s) {
    return formula(s, null);
  }

  public static Formula formula(String s, BiMap<String, Integer> mapping) {
    Parser parser = new Parser(new StringReader(s));

    if (mapping != null) {
      parser.map = mapping;
    }

    try {
      return parser.formula();
    } catch (ParseException e) {
      throw new RuntimeException(e);
    }
  }

  private static void jj_la1_init_0() {
    jj_la1_0 = new int[] {};
  }

  private static void jj_la1_init_1() {
    jj_la1_1 = new int[] {};
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
    ReInit(stream, null);
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try {
      jj_input_stream.ReInit(stream, encoding, 1, 1);
    } catch (java.io.UnsupportedEncodingException e) {
      throw new RuntimeException(e);
    }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) {
      jj_la1[i] = -1;
    }
    for (int i = 0; i < jj_2_rtns.length; i++) {
      jj_2_rtns[i] = new JJCalls();
    }
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < jj_2_rtns.length; i++) {
      jj_2_rtns[i] = new JJCalls();
    }
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < jj_2_rtns.length; i++) {
      jj_2_rtns[i] = new JJCalls();
    }
  }

  final public Formula atom() throws ParseException {
    String atomString;
    Formula f;
    if (jj_2_40(2)) {
      jj_consume_token(TRUE);
      {
        if ("" != null) {
          return BooleanConstant.TRUE;
        }
      }
    } else if (jj_2_41(2)) {
      jj_consume_token(FALSE);
      {
        if ("" != null) {
          return BooleanConstant.FALSE;
        }
      }
    } else if (jj_2_42(2)) {
      atomString = jj_consume_token(ID).image;
      if (!map.containsKey(atomString)) {
        map.put(atomString, map.size());
      }

      {
        if ("" != null) {
          return new Literal(map.get(atomString));
        }
      }
    } else if (jj_2_43(2)) {
      jj_consume_token(LPAR);
      f = disjunction();
      jj_consume_token(RPAR);
      {
        if ("" != null) {
          return f;
        }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Formula binaryOp() throws ParseException {
    Formula left;
    Formula right;
    left = unaryOp();
    if (jj_2_31(2)) {
      if (jj_2_24(2)) {
        jj_consume_token(IMP);
        right = unaryOp();
        left = Disjunction.create(left.not(), right);
      } else if (jj_2_25(2)) {
        jj_consume_token(BIIMP);
        right = unaryOp();
        left = Conjunction
          .create(Disjunction.create(left.not(), right), Disjunction.create(left, right.not()));
      } else if (jj_2_26(2)) {
        jj_consume_token(MOP);
        right = unaryOp();
        left = MOperator.create(left, right);
      } else if (jj_2_27(2)) {
        jj_consume_token(UOP);
        right = unaryOp();
        left = UOperator.create(left, right);
      } else if (jj_2_28(2)) {
        jj_consume_token(ROP);
        right = unaryOp();
        left = ROperator.create(left, right);
      } else if (jj_2_29(2)) {
        jj_consume_token(VOP);
        right = unaryOp();
        left = ROperator.create(left, right);
      } else if (jj_2_30(2)) {
        jj_consume_token(WOP);
        right = unaryOp();
        left = WOperator.create(left, right);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    {
      if ("" != null) {
        return left;
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Comparison comp() throws ParseException {
    if (jj_2_44(2)) {
      jj_consume_token(GEQ);
      {
        if ("" != null) {
          return Comparison.GEQ;
        }
      }
    } else if (jj_2_45(2)) {
      jj_consume_token(GT);
      {
        if ("" != null) {
          return Comparison.GT;
        }
      }
    } else if (jj_2_46(2)) {
      jj_consume_token(LEQ);
      {
        if ("" != null) {
          return Comparison.LEQ;
        }
      }
    } else if (jj_2_47(2)) {
      jj_consume_token(LT);
      {
        if ("" != null) {
          return Comparison.LT;
        }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Formula conjunction() throws ParseException {
    Formula left, right;
    left = binaryOp();
    label_11:
    while (true) {
      if (jj_2_23(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(AND);
      right = binaryOp();
      left = Conjunction.create(left, right);
    }
    {
      if ("" != null) {
        return left;
      }
    }
    throw new Error("Missing return statement in function");
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  final public Formula disjunction() throws ParseException {
    Formula left, right;
    left = conjunction();
    label_10:
    while (true) {
      if (jj_2_22(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(OR);
      right = conjunction();
      left = Disjunction.create(left, right);
    }
    {
      if ("" != null) {
        return left;
      }
    }
    throw new Error("Missing return statement in function");
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  final public Formula formula() throws ParseException {
    Formula f;
    f = disjunction();
    jj_consume_token(0);
    {
      if ("" != null) {
        return f;
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Formula formulaEmbedded() throws ParseException {
    Formula f;
    f = disjunction();
    jj_consume_token(SEMIC);
    {
      if ("" != null) {
        return f;
      }
    }
    throw new Error("Missing return statement in function");
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[58];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 0; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1 << j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1 << j)) != 0) {
            la1tokens[32 + j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 58; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /**
   * Match char inside quoted string.
   */
  final public void getChar(StringBuilder builder) throws ParseException {
    Token t;
    if (jj_2_49(2)) {
      t = jj_consume_token(CHAR);
    } else if (jj_2_50(2)) {
      t = jj_consume_token(CNTRL_ESC);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (t.image.length() < 2) {
      // CHAR
      builder.append(t.image.charAt(0));
    } else if (t.image.length() < 6) {
      // ESC
      char c = t.image.charAt(1);
      switch (c) {
        case 'b':
          builder.append((char) 8);
          break;
        case 'f':
          builder.append((char) 12);
          break;
        case 'n':
          builder.append((char) 10);
          break;
        case 'r':
          builder.append((char) 13);
          break;
        case 't':
          builder.append((char) 9);
          break;
        default:
          builder.append(c);
      }
    }
  }

  /** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) {
      token = token.next;
    } else {
      token = token.next = token_source.getNextToken();
    }
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  /** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) {
        t = t.next;
      } else {
        t = t.next = token_source.getNextToken();
      }
    }
    return t;
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_1();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(0, xla);
    }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_10();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(9, xla);
    }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_11();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(10, xla);
    }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_12();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(11, xla);
    }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_13();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(12, xla);
    }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_14();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(13, xla);
    }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_15();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(14, xla);
    }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_16();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(15, xla);
    }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_17();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(16, xla);
    }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_18();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(17, xla);
    }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_19();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(18, xla);
    }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_2();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(1, xla);
    }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_20();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(19, xla);
    }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_21();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(20, xla);
    }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_22();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(21, xla);
    }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_23();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(22, xla);
    }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_24();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(23, xla);
    }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_25();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(24, xla);
    }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_26();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(25, xla);
    }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_27();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(26, xla);
    }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_28();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(27, xla);
    }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_29();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(28, xla);
    }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_3();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(2, xla);
    }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_30();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(29, xla);
    }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_31();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(30, xla);
    }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_32();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(31, xla);
    }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_33();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(32, xla);
    }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_34();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(33, xla);
    }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_35();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(34, xla);
    }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_36();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(35, xla);
    }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_37();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(36, xla);
    }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_38();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(37, xla);
    }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_39();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(38, xla);
    }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_4();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(3, xla);
    }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_40();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(39, xla);
    }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_41();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(40, xla);
    }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_42();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(41, xla);
    }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_43();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(42, xla);
    }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_44();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(43, xla);
    }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla;
    jj_lastpos = jj_scanpos = token;
    try {
      return !jj_3_45();
    } catch (LookaheadSuccess ls) {
      return true;
    } finally {
      jj_save(44, xla);
    }
  }
